--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
 </head>
 <body>
-   <img id="logo" src="/wvision_logos_all/wvisionco_logo_black_transparent.png" alt="logo"/> 
+   <img id="logo" src="./wvision_logos_all/wvisionco_logo_black_transparent.png" alt="logo"/> 
    <script>
         const urlParams = new URLSearchParams(window.location.search);
 
