--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 l = urlParams.get('logo');
                 console.log({l})
                 if( l === 'white' || l === 'black'){
-                    document.getElementById('logo').src = `/wvision_logos_all/wvisionco_logo_${l}_transparent.png`
+                    document.getElementById('logo').src = `./wvision_logos_all/wvisionco_logo_${l}_transparent.png`
                 } else {
                     console.log('color not valid')
                 }
